--- a/.envSamples
+++ b/.envSamples
@@ -1,6 +1,6 @@
 this is not a coding file this for just sample what ever the hiding keys is there in .env
 that we show here for reference, here won't show the key only name we show
-
+This is for just passing the informations
 
 REACT_APP-UNSPLASH_ACCESS_KEY=      
 
